--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,17 @@
-<h1 class="my-8 text-center text-6xl font-bold"><span class="text-green-600">TailwindCSS</span> and <span class="text-red-600">Angular</span> is awesome!</h1>
-<p class="text-center text-3xl">Thanks for reading!</p>
+    <div class="w-full h-screen bg-yellow-200">
+  
+        <div class="center_page flex flex-col gap-4 bg-yellow-300 p-5 w-96">
+            <div class="m-auto w-24 h-24 rounded-full bg-red-50 bg-cover bg-center bg-no-repeat" [ngStyle]="{'background-image':'url(assets/imags/pic_login.jpg)'}">
+            </div>
+            <div class="flex flex-col">
+                <label for="txt_username">Username</label>
+                <input id="txt_username" type="text" pInputText>
+            </div>
+            <div class="flex flex-col">
+                <label for="txt_password">Password</label>
+                <p-password id="txt_password" [toggleMask]="true"></p-password>
+                <small id="txt_password-help" class="p-error">Password is not available.</small>
+            </div>
+           
+        </div>
+    </div>
