--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
         <div class="text-center">
             <h1 class="text-white font-bold">Web <span class="text-yellow-500 font-bold text-3xl">BOSS</span> </h1>
         </div>
-        <div class="flex flex-col gap-4 bg-yellow-200 p-5 ">
+        <div class="flex flex-col gap-4 bg-yellow-200 p-5 rounded-3xl">
             <div class="m-auto w-24 h-24 rounded-full bg-red-50 bg-cover bg-center bg-no-repeat" [ngStyle]="{'background-image':'url(assets/images/pic_login.jpg)'}">
             </div>
             <div class="flex flex-col">
